# api-tutorial

./: .env.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tutorial-parte1-3.py  tutorial.ipynb  tutorial.md
app/: auth.py  database.py  main.py  models.py
app/core/: config.py  database.py  events.py  exception_handlers.py  exceptions.py  security.py  sse.py  websocket_manager.py
app/dependencies/: auth.py  providers.py
app/models/: ticket.py  ticket_message.py  user.py  webhook_subscription.py
app/repositories/: __init__.py  protocols.py
app/repositories/beanie/: __init__.py  message_repository.py  ticket_repository.py  user_repository.py  webhook_subscription_repository.py
app/routers/: __init__.py  auth.py  items.py  messages.py  sse.py  stream.py  tickets.py  users.py  webhook_subscriptions.py  webhooks.py  websocket.py  ws.py
app/schemas/: __init__.py  auth.py  ticket.py  ticket_message.py  webhook_subscription.py
app/services/: auth_service.py  message_service.py  stream_service.py  ticket_service.py  webhook_dispatcher.py  webhook_subscription_service.py
app/static/: index.html
app/templates/: home.html  login.html  register.html  webhook_test.html  webhooks.html  ws.html  ws_chat.html  ws_echo.html
services/email-notifier/: main.py  requirements.txt
tests/: test_app.py  test_sse_manager.py  test_webhook_dispatcher.py  test_websocket_manager.py
