[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-tutorial"
version = "2.0.0"
description = "Aplicação de exemplo criada para a oficina de FastAPI com MongoDB + Beanie."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "beanie>=2.0.0",
    "pymongo>=4.8.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "mongomock-motor>=0.0.34",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
